  - Autocomplete fields (with text-line.@ac-transition) now hide the
    ID/value and put the label in the input box; they also do a server call
    with the initial value to get a label for it if there is no
    @ac-initial-text attribute
  - Added container-row and row-col elements for 12 column responsive
    layouts currently implemented with the Bootstrap 12 col styles
- Entity Facade:
  - Added in operator (_op) for searchFormInputs/search-form-inputs
  - Added entity.field.@default attribute with a Groovy expression to set a
    default for a field based on other fields, constants, etc
  - Added DataDocumentCondition.operator field, uses same operator values
    as XML Actions econdition.@operator

Bug Fixes:

- Fixed security issue where current password was stored in
  UserPasswordHistory with 2-way encryption. Now only previous passwords
  are stored in UserPasswordHistory on password change, and they are stored
  in the hashed (one-way encrypted) form along with the salt and hash type.
- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters
- Fixed issues with complex-alias where aliased entities were not add
  to list of aliased entities used and alias level function was not added
- Fixed tx cache issue where a value could be updated after putting it into
  the cache causing an attempt to read the original to get an updated value
- Changed ResourceReference.init() to use ExecutionContextFactory instead
  of ExecutionContext for cases where the object is long-lived
- Fixed search#DataDocuments issues with documentType parameter, adding it
  to the count query (was getting wrong counts because it was left out),