@@ -56,7 +56,10 @@ This Work includes contributions authored by David E. Jones, not as a
                     </xs:documentation></xs:annotation>
                 </xs:element>
                 <xs:element ref="always-actions" minOccurs="0"/>
-                <xs:element ref="transition" minOccurs="0" maxOccurs="unbounded"/>
+                <xs:choice minOccurs="0" maxOccurs="unbounded">
+                    <xs:element ref="transition"/>
+                    <xs:element ref="transition-include"/>
+                </xs:choice>
                 <xs:element ref="subscreens" minOccurs="0"/>
                 <xs:element ref="pre-actions" minOccurs="0"/>
                 <xs:group ref="section-elements"/>
@@ -388,6 +391,14 @@ This Work includes contributions authored by David E. Jones, not as a
                 request to the transition.</xs:documentation></xs:annotation>
         </xs:attribute>
     </xs:attributeGroup>
+
+    <xs:element name="transition-include">
+        <xs:complexType>
+            <xs:attribute name="name" type="xs:string" use="required"/>
+            <xs:attribute name="location" type="xs:string" use="required"/>
+            <xs:attribute name="method" type="xs:string"/>
+        </xs:complexType>
+    </xs:element>
 
     <!-- ================ Subscreens ================ -->
     <xs:element name="subscreens">
